--- a/to-do-app/package.json
+++ b/to-do-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.1",
+    "@prisma/client": "^5.20.0",
     "@tailwindcss/typography": "^0.5.15",
     "daisyui": "^4.12.12",
     "dotenv": "^16.4.5",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
