--- a/to-do-app/package.json
+++ b/to-do-app/package.json
@@ -17,7 +17,8 @@
     "drizzle-orm": "^0.34.1",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
