--- a/to-do-app/package.json
+++ b/to-do-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@neondatabase/serverless": "^0.10.1",
     "@prisma/client": "^5.20.0",
     "@tailwindcss/typography": "^0.5.15",
